# workstation_setup

./: .copier-answers.ci.yml  .gitignore  .pages  404.html  LICENSE  Makefile  README.md  create_package.sh  deploy_ubuntu.sh  deploy_wsl.sh  index.html  install.sh  install_wsl.sh  mkdocs.yml  requirements.txt  search.html  setup.bash  setup_ubuntu.sh  setup_wsl.sh  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  mkdocs.yml  postcreate.sh
.github/: ci-config.yml  labeler.yml
.github/workflows/: automerge.yml  ci_update.yml  labeler.yml  pr_automerge.yml  pr_bot.yml  publish_docs.yml  release_draft.yml  site.yml  test.yml  update_docker.yml
LICENSE/: index.html
config/: .bash_aliases  .bash_dashing  .bash_jekyll  .gitconfig  README.md  index.html  install.sh  user-config-diff.sh  user-config-update.sh  vscode.settings.json
config/dashing_ws/: .devcontainer.json  .rosinstall  get_code.sh  install_depends.sh  vscode_ws.code-workspace
config/install/: index.html
config/user/: .bash_aliases  .gitconfig
config/user-config-diff/: index.html
config/user-config-update/: index.html
config/ws_example/: .devcontainer.json  .rosinstall  Dockerfile  Makefile
debian/: changelog  control  copyright  install
dockerfiles/: Makefile  README.md  index.html  update.sh
dockerfiles/crystal-base/: Dockerfile  install_ros2.sh
dockerfiles/crystal-dev/: Dockerfile  install_ros2_dev.sh
dockerfiles/dashing-base/: Dockerfile  entrypoint.sh
dockerfiles/dashing-dev/: Dockerfile
dockerfiles/eloquent-base/: Dockerfile  install_ros2.sh
dockerfiles/eloquent-dev/: Dockerfile  install_ros2_dev.sh
dockerfiles/gh-pages-dev/: Dockerfile
dockerfiles/kinetic-base/: Dockerfile  install_ros.sh
dockerfiles/kinetic-dev/: Dockerfile  install_ros_dev.sh
dockerfiles/melodic-base/: Dockerfile  install_ros.sh  install_ros_melodic.sh  ros_melodic_entrypoint.sh
dockerfiles/melodic-dev/: Dockerfile  install_ros_dev.sh  install_ros_melodic_dev.sh
dockerfiles/ros/: install_ros_dev.sh  install_ros_dev3.sh  kinetic-base.Dockerfile  kinetic-dev.Dockerfile  kinetic.Dockerfile  melodic-base.Dockerfile  melodic-dev.Dockerfile  melodic.Dockerfile  noetic-base.Dockerfile  noetic-dev.Dockerfile  noetic.Dockerfile
dotfiles/: .bash_aliases  .gitconfig  install.sh
examples/: .pages  README.md  index.html
install/: base.sh  index.html  jekyll.sh  programs.sh  ros_desktop.sh  user_config.sh
latest/: 404.html  index.html  sitemap.xml
programs/: .gitignore  README.md  docker-decendents  docker-services-start  docker-services-update  gif-gen  index.html  pyproject.toml  setup.py  update-docker-images  user-config-diff  user-config-update
scripts/: .gitignore  README.md  compare_user_config.sh  docker-services-start.sh  docker-services-stop.sh  docker_decendents.py  docker_services_start.sh  docker_services_stop.sh  fix_commits.sh  get_google_drive_file.py  gif-gen.sh  google_drive.py  index.html  install  install_aws.sh  install_base.sh  install_config.sh  install_docker.sh  install_gh.sh  install_google_cli.sh  install_jekyll.sh  install_programs.sh  install_ros2.sh  install_ros2_crystal.sh  install_ros2_dashing.sh  install_ros2_desktop.sh  install_ros2_dev.sh  install_ros_desktop.sh  install_ros_melodic.sh  install_ros_melodic_dev.sh  install_user.sh  install_user_config.sh  install_vscode.sh  install_wsl  pyproject.toml  remove-dupes.sh  requirements.txt  ros_crystal_entrypoint.sh  update_docker.sh  update_user_config.sh
scripts/docker-decendents/: index.html
scripts/docker-images-update/: index.html
scripts/docker-services-start/: index.html
scripts/docker-services-stop/: index.html
scripts/docker-services-update/: index.html
scripts/get_google_drive_file/: index.html
scripts/gif-gen/: index.html
scripts/install-appimage/: index.html
scripts/keep_to_obsidian/: index.html
scripts/programs/: docker-images-update.sh  docker-services-stop.sh  docker-services-update.sh  user-config-diff.sh  user-config-update.sh
scripts/programs/docker-decendents/: index.html
scripts/programs/docker-images-update/: index.html
scripts/programs/docker-services-start/: index.html
scripts/programs/docker-services-stop/: index.html
scripts/programs/docker-services-update/: index.html
scripts/programs/gif-gen/: index.html
scripts/programs/user-config-diff/: index.html
scripts/programs/user-config-update/: index.html
scripts/remove-dupes/: index.html
scripts/remove_dupes/: index.html
scripts/utilities/: keep_to_obsidian.py
scripts/utilities/get_google_drive_file/: index.html
scripts/utilities/keep_to_obsidian/: index.html
scripts/utils/get_google_drive_file/: index.html
scripts/utils/keep_to_obsidian/: index.html
search/: search_index.json
services/: README.md  index.html
setup/: base.sh  desktop.sh  google_cli.sh  mkdocs.sh  programs.sh
user/: .bash_aliases  .bash_aliases_bazel  .bash_aliases_git  .gitconfig
workspaces/: index.html
(+168 files in other folders)
