[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workstation-setup"
dynamic = ["version"]
description = "My workstation setup scripts."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3"
authors = [
    { name = "Allison Thackston", email = "allison@allisonthackston.com" },
]
keywords = [
    "scripts",
    "setup",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "docker"
]

[project.urls]
Documentation = "https://althack.dev/workstation_setup/"
Homepage = "https://althack.dev/workstation_setup/"
Issues = "https://github.com/athackst/workstation_setup/issues"
"Source Code" = "https://github.com/athackst/workstation_setup"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"


[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "*.sh"
]

[tool.hatch.build.targets.wheel]
packages= ["workstation_setup"]

[tool.hatch.build.targets.wheel.shared-data]
"docker-decendents.py" = "bin/docker-decendents"
"docker-images-update.sh" = "bin/docker-images-update"
"docker-services-start.sh" = "bin/docker-services-start"
"docker-services-stop.sh" = "bin/docker-services-stop"
"docker-services-update.sh" = "bin/docker-services-update"
"gif-gen.sh" = "bin/gif-gen"
"user-config-diff.sh" = "bin/user-config-diff"
"user-config-update.sh" = "bin/user-config-update"
